Тест выделен в отдельную программу

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,8 @@
 cmake_minimum_required(VERSION 3.0)
 project(lab01)
 set(CMAKE_EXE_LINKER_FLAGS -static)
-set(SOURCE_FILES main.cpp temperature.cpp)
+set(SOURCE_FILES main.cpp temperature.cpp )
 add_executable(lab01 ${SOURCE_FILES})
+add_executable(lab01_input_test test_input.cpp temperature.cpp)
 
 
